--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -1,1 +1,15 @@
-<p>products works!</p>
+<mat-card class="product-card" *ngFor="let product of products">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{product.name}}</mat-card-title>
+      <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+      Price: {{product.price}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>Add To Cart</button>
+    </mat-card-actions>
+  </mat-card>
