--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,13 +28,8 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/Orders']"
-              >Orders</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/Users']"
-              >Users</a
+            <a class="nav-link text-dark" [routerLink]="['/Admin']"
+              >Admin</a
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
