--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -4,12 +4,14 @@
       <mat-card-title>{{product.name}}</mat-card-title>
       <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
     </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <p>
       Price: {{product.price}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>Add To Cart</button>
+      <button mat-button (click)="addToCart(product.productsId)">Add To Cart</button>
     </mat-card-actions>
-  </mat-card>
+</mat-card>
+
