--- a/Views/Order/Delete.cshtml
+++ b/Views/Order/Delete.cshtml
@@ -30,11 +30,8 @@
             @Html.DisplayFor(model => model.Shipped)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.applicationUser)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.UserId)
-        </dd class>
     </dl>
     
     <form asp-action="Delete">
