--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -1,6 +1,5 @@
 <mat-card class="product-card" *ngFor="let product of products">
     <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>{{product.name}}</mat-card-title>
       <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
     </mat-card-header>
@@ -11,7 +10,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="addToCart(product.productsId)">Add To Cart</button>
+      <button color="primary" (click)="addToCart(product.productsId)">Add To Cart</button>
     </mat-card-actions>
 </mat-card>
 
