--- a/ClientApp/src/app/shopping-cart/shopping-cart.component.html
+++ b/ClientApp/src/app/shopping-cart/shopping-cart.component.html
@@ -1,5 +1,5 @@
 
-<ng-container *ngIf="!loading">
+<mat-spinner *ngIf="loaderService.loading$ | async"></mat-spinner>
 <mat-card *ngFor="let cart of cartProducts" class="cart">  
     <div class="titlerow">{{cart?.name}}<span class="space"></span> <mat-icon (click)="deleteProduct(cart.cartProductId)">delete</mat-icon></div>
     <mat-divider></mat-divider>  
@@ -9,4 +9,4 @@
     <button mat-raised-button color="primary"(click)="checkOut()">checkout</button>
    </span>
 </mat-card>
-</ng-container>
+
