--- a/ClientApp/src/app/shopping-cart/shopping-cart.component.html
+++ b/ClientApp/src/app/shopping-cart/shopping-cart.component.html
@@ -3,10 +3,9 @@
 <mat-card *ngFor="let cart of cartProducts" class="cart">  
     <div class="titlerow">{{cart?.name}}<span class="space"></span> <mat-icon (click)="deleteProduct(cart.cartProductId)">delete</mat-icon></div>
     <mat-divider></mat-divider>  
-    <div class="titlerow"><span class="space"></span> Price: {{cart?.price}} </div>
+    <div class="titlerow"><span class="space"></span> Price: {{cart?.price | currency}} </div>
 </mat-card>
-<mat-card ><span class="checkout-container">
-    <button mat-raised-button color="primary"(click)="checkOut()">checkout</button>
-   </span>
+<mat-card >
+   <div class="titlerow">Total: {{orderTotal | currency}} <span class="space"></span><button mat-raised-button color="primary"(click)="checkOut()">checkout</button></div>
 </mat-card>
 
