--- a/ClientApp/src/app/productsform/productsform.component.html
+++ b/ClientApp/src/app/productsform/productsform.component.html
@@ -32,10 +32,18 @@
                     required
                     alphaNumeric>
         </mat-form-field>
+        <mat-form-field>
+            <ngx-mat-file-input
+                    placeholder="Upload Image"
+                    formControlName="image" 
+                    required
+                >
+            </ngx-mat-file-input>
+            <mat-icon matSuffix>folder</mat-icon>
+        </mat-form-field>
     </mat-dialog-content>
     
     <mat-dialog-actions>
-        <button class="mat-raised-button mat-primary"(click)="save(true)" *ngIf="isEdit">Delete</button>
         <button class="mat-raised-button mat-primary"(click)="save(false)" [disabled]="productForm.invalid">Save</button>
     </mat-dialog-actions>
     </form>
