--- a/ClientApp/src/app/products/products.component.html
+++ b/ClientApp/src/app/products/products.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>{{product.name}}</mat-card-title>
       <mat-card-subtitle>{{product.description}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image [src]="getPhoto(product.image)" alt="Photo of a Shiba Inu">
+    <img mat-card-image [src]="getPhoto(product.image)">
     <mat-card-content>
       <p>
       Price: {{product.price | currency}}
