--- a/ClientApp/src/app/shopping-cart/shopping-cart.component.html
+++ b/ClientApp/src/app/shopping-cart/shopping-cart.component.html
@@ -1,11 +1,22 @@
 
 <mat-spinner *ngIf="loaderService.loading$ | async"></mat-spinner>
+
 <mat-card *ngFor="let cart of cartProducts" class="cart">  
     <div class="titlerow">{{cart?.name}}<span class="space"></span> <mat-icon (click)="deleteProduct(cart.cartProductId)">delete</mat-icon></div>
     <mat-divider></mat-divider>  
     <div class="titlerow"><span class="space"></span> Price: {{cart?.price | currency}} </div>
 </mat-card>
 <mat-card >
-   <div class="titlerow">Total: {{orderTotal | currency}} <span class="space"></span><button mat-raised-button color="primary"(click)="openDialog()">checkout</button></div>
+    <mat-form-field>
+    <mat-label>Select a Discount</mat-label>
+    <mat-select [(value)]= "selectedDiscount" (selectionChange)="onChange($event.value)">
+        <mat-option *ngFor="let discount of discounts" [value]=[discount.discountAmount]>{{discount.discountName}}</mat-option>
+    </mat-select>
+    </mat-form-field>
+    <mat-divider></mat-divider>
+    <ng-container *ngIf="selectedDiscount">
+        <div>Discount Amount: {{ selectedDiscount.toString() | currency}}</div>
+    </ng-container>
+   <div class="titlerow">Total: {{orderTotal}} <span class="space"></span><button mat-raised-button color="primary"(click)="openDialog()">checkout</button></div>
 </mat-card>
 
